# chess

./: .gitignore  CMakeLists.txt  run.sh
src/: a.out  board.cpp  board.hpp  game.cpp  game.hpp  main.cpp  piece.cpp  piece.hpp  position.cpp  position.hpp  ui.cpp  ui.hpp
src/pieces/: bishop.cpp  bishop.hpp  include_piece.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
